<resources>
    <string name="app_name">HomeWork12</string>
    <string name="email">email</string>
    <string name="login_">login</string>
    <string name="forget_your_password">forget your password</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="password">password</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">register</string>
    <string name="registration">registration</string>
    <string name="search_by_id">search by id</string>
    <string name="search">search</string>
    <string name="create">Create</string>
    <string name="name">name</string>
    <string name="job">job</string>
    <string name="please_fill_all_fields">please fill all fields</string>
    <string name="incorrect_email_address">incorrect email address</string>
    <string name="password_confirmation_does_not_match">password confirmation does not match!</string>
    <string name="message">message</string>
    <string name="phone">phone</string>
    <string name="_phone">phone:</string>
    <string name="_position">position</string>
    <string name="mail">mail:</string>
    <string name="position">position:</string>
    <string name="profile">profile</string>
    <string name="users">users</string>
</resources>